weather-app-manifests/UI/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weatherapp-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: weatherapp-ui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: weatherapp-ui
    spec:
      containers:
      - name: weather-ui
        image: elnabatshy/weatherapp-ui:v4
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
