weather-app-manifests/UI/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weatherapp-ui-ingress
spec:
  ingressClassName: nginx
  # tls:
  # - hosts:
  #   - weatherapp-ui.local.com
  #   secretName: weatherapp-ui-tls
  rules:
  - # host: weatherapp-ui.local.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: weatherapp-ui
            port:
              number: 80
